# rust-api

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
src/: main.rs
src/car/: mod.rs  model.rs  route.rs  store.rs
src/db/: mod.rs
src/other/: mod.rs  world.rs
tmp/postgres/: postmaster.pid
tmp/postgres/base/12994/: pg_internal.init
tmp/postgres/base/16384/: pg_internal.init
tmp/postgres/global/: 1262  2671  pg_control  pg_internal.init
tmp/postgres/pg_stat_tmp/: db_0.stat  db_12994.stat  db_16384.stat  global.stat
